# depot

./: .gitignore  Cargo.toml  README.md  depot.example.toml
.github/workflows/: build.yml  ci.yml
docs/: BUILDING.md  CONNECTING.md  PRIVILEGED_PORTS.md  RUNNING_AS_SERVICE.md
src/: admin.rs  config.rs  main.rs  random_creds.rs  templates.rs  themes.rs  vfs.rs
src/protocols/: ftp.rs  http.rs  mod.rs  smb.rs
src/templates/admin/: config.html.j2  dashboard.html.j2  shares.html.j2
src/templates/ftp/: welcome.txt.j2
src/templates/http/: directory.html.j2  error.html.j2
tests/: auth_test.sh  cli_test.sh  ftp_test.sh  http_test.sh  smb_test.sh
tests/fixtures/: README.md  depot-ftp.toml  depot-http.toml  depot-test.toml  test.txt
tests/lib/: depot.sh  ftp.sh  http.sh  output.sh  smb.sh  utils.sh
