[package]
name = "depot"
version = "0.1.0"
edition = "2021"
description = "Portable file sharing server for retro and modern machines"
license = "MIT"
authors = ["Depot Contributors"]

[dependencies]
# Async runtime
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "fs",
    "io-util",
    "sync",
    "signal",
    "macros",
] }

# FTP server (using ring instead of aws-lc for smaller binary)
unftp-sbe-fs = "0.4"
libunftp = { version = "0.23", default-features = false, features = ["ring"] }
unftp-core = "0.1"

# HTTP server (minimal, retro-compatible)
axum = "0.7"
tokio-util = { version = "0.7", features = ["io"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Random generation
rand = "0.8"

# Templating (lightweight Jinja2-like)
minijinja = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
enable-ansi-support = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# Password hashing
argon2 = "0.5"

# Terminal handling (for password input)
rpassword = "7"

# Async utilities
async-trait = "0.1"

# URL encoding
urlencoding = "2"

# Time handling
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }

# For future SQLite indexing (optional feature)
# rusqlite = { version = "0.31", optional = true, features = ["bundled"] }

[features]
default = []
# indexing = ["rusqlite"]

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Single codegen unit for better optimization
panic = "abort"   # No unwinding
strip = true      # Strip symbols
